# coursera_cpp_course2

./: .gitignore
week1/w1_t1_matrix_sum/src/: w1_t1_matrix_sum.cpp
week1/w1_t2_avg_temp_2/src/: w1_t2_avg_temp_2.cpp
week1/w1_t3_block_weight/src/: w1_t3_block_weight.cpp
week1/w1_t4_regions_db/src/: w1_t4_regions_db.cpp
week1/w1_t5_task_tracker/src/: w1_t5_task_tracker.cpp
week1/w1_t6_sqr_all/src/: w1_t6_sqr_all.cpp
week1/w1_t7_elem_ref/src/: w1_t7_elem_ref.cpp
week2/w2_t1_decomposition/src/: w2_t1_decomposition.cpp
week2/w2_t2_GetDistinctRealRootCount_tests/src/: w2_t2_GetDistinctRealRootCount_tests.cpp
week2/w2_t3_Person_tests/src/: w2_t3_Person_tests.cpp
week2/w2_t4_Rational_tests/src/: w2_t4_Rational_tests.cpp
week2/w2_t5_IsPalindrome/: CMakeLists.txt
week2/w2_t5_IsPalindrome/src/: w2_t5_IsPalindrome.cpp
week3/w3_t1_sum_reverse_sort/src/: w3_t1_sum_reverse_sort.cpp
week3/w3_t2_phone_number/src/: w3_t2_phone_number.cpp
week3/w3_t3_Rectangle/src/: rectangle.h  w3_t3_Rectangle.cpp
week3/w3_t4_decomposition_2/src/: bus_manager.cpp  main.cpp  (+5 more)
week4/w4_t10_prefix_grouping/: CMakeLists.txt
week4/w4_t10_prefix_grouping/src/: w4_t10_prefix_grouping.cpp
week5/w5_t4_refactoring/: CMakeLists.txt
week5/w5_t4_refactoring/src/: pashnyov_ivan.cpp  to_check1_Source1.cpp  to_check2_W5_refactored.cpp  w5_t4_refactoring.cpp  w5_t4_refactoring_orig.cpp
week6/w6_final_project/: CMakeLists.txt
week6/w6_final_project/src/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  entry.h  main.cpp  node.cpp  node.h  test_db.h  test_runner.h
(+22 files in other folders)
