# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("w5_t4_refactoring")

# Включите подпроекты.
add_executable (w5_t4_refactoring src/w5_t4_refactoring.cpp)
#add_executable (w5_t4_refactoring src/to_check1_Source1.cpp)
#add_executable (w5_t4_refactoring src/to_check2_W5_refactored.cpp)
#add_executable (w5_t4_refactoring src/pashnyov_ivan.cpp)
